# propositional-logic-truth-table-generator-python

./: .gitignore  README.md  pyproject.toml
src/modules/: truth_table_generator.py  truth_table_visualizer.py  wff_traverser.py
src/propositional_logic_truth_table_generator/modules/: parser.py  truth_table_generator.py  truth_table_visualizer.py  wff_traverser.py
src/propositional_logic_truth_table_generator/scripts/: cli.py
tests/: truth_table_and.txt  truth_table_generator_test.py  truth_table_not_and.txt
tests/test_outputs/: truth_table_and.txt  truth_table_and_or_and.txt  truth_table_implication.txt  truth_table_not_and.txt
