[tool.poetry]
name = "truth_table_generator"
version = "0.1.0"
description = ""
authors = ["Raphael Bonatti"]
readme = "README.md"
packages = [{include = "modules", from="src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
textx = "^4.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
