[tool.poetry]
name = "truth_table_generator"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = ["Raphael Bonatti"]
readme = "README.md"
packages = [{include = "propositional_logic_truth_table_generator", from="src"}, {include = "modules", from="src/propositional_logic_truth_table_generator"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
textx = "^4.0.1"
prettytable = "^3.10.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.poetry.scripts]
pltt-cli = "propositional_logic_truth_table_generator.scripts.cli:entrypoint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
